# misc-python

./: .gitignore  README.md
anki-card-generator/: .gitignore  .pre-commit-config.yaml  Pipfile  README.md  claude-web-spec-driven-design-research.md  code-summary.md  config.ini.example  implementation_status.md  prompt_plan.md  pyproject.toml  requirements.txt  spec.md
anki-card-generator/agentic_coding/: implementation_status.md  master_prompt.md
anki-card-generator/agentic_coding/individual_prompts/: prompt_02.md  prompt_04.md  prompt_06.md  prompt_08.md  prompt_09.md  prompt_12.md  prompt_13.md  prompt_14.md
anki-card-generator/data/: all-sections-08-15-2025.md
anki-card-generator/output_real/phase1/: 03_08222025_learn_cantrill_tech_fundamentals_networki.md  07_09032025_learn_cantrill_networking_continued.md  08_09152025_learn_cantrill_transit_gateway_vpc_contin.md  101_amazon_relational_database_service_rds.md  103_aurora_part_2.md  106_sqs.md  10_09272025_learn_cantrill_aws_private_link_vpc_endpo.md  110_sns_message_delivery_retries.md  118_amazon_emr.md  119_running_jobs_on_aws.md  11_iam_access_analyzer.md  123_amazon_timestream.md  124_amazon_athena.md  127_quiz_9_data_engineering_quiz.md  129_aws_cloudwatch_logs.md  12_aws_sts_security_token_service.md  131_aws_xray.md  132_aws_personal_health_dashboard_phd.md  134_study_group_practice_questions.md  137_cloudformation.md  139_aws_sam_serverless_application_model.md  141_aws_systems_manager_ssm_overview.md  142_aws_cloud_map.md  143_section_quiz.md  145_aws_tag_editor.md  146_trusted_advisor.md  147_aws_service_quotas.md  148_ec2_launch_types_savings_plan.md  149_s3_cost_savings.md  14_aws_directory_services.md  151_aws_budgets_cost_explorer.md  152_aws_compute_optimizer.md  158_snow_family.md  15_aws_organizations.md  160_aws_database_migration_service_dms.md  162_disaster_recovery.md  163_aws_fault_injection_simulator_fis.md  164_vm_migrations_services.md  166_aws_backup.md  16_service_control_policies_scp.md  (+65 more)
anki-card-generator/output_real/phase2/: stats.json
anki-card-generator/output_test/phase1/: 01_iam.md  02_08172025_learn_cantrill.md  04_08262025_learn_cantrill_tech_fundamentals_networki.md  102_aurora_part_1.md  (+103 more)
anki-card-generator/prompts/: gemini_qa_prompt.txt  generate_qa.txt  implementation_status.md  master_prompt.md
anki-card-generator/spec/: harper-spec-approach.md  spec.md
anki-card-generator/tests/: __init__.py  test_api_cache.py  test_config.py  test_gemini_client.py  test_integration.py  test_main.py  test_models.py  test_phase1_parser.py  test_phase2_generator.py  test_phase3_formatter.py  test_statistics.py  test_validators.py
(+124 files in other folders)
